lab1/test/fails/no_end_err4.asm
    .orig x3000
	add r0, r0, r1